[workspace]
members = [
    "body-image",
    "barc",
    "body-image-futio",
    "barc-cli",
]

[patch.crates-io]
"barc" = { path = "barc" }
"barc-cli" = { path = "barc-cli" }
"body-image" = { path = "body-image" }
"body-image-futio" = { path = "body-image-futio" }

"blocking-permit" = { git = "https://github.com/dekellum/blocking-permit", branch = "dev" }

[profile.release]
lto = "thin"
incremental = false

[profile.bench]
lto = "thin"
incremental = false
