[workspace]
members = [
    "body-image",
    "barc",
    "body-image-futio",
    "barc-cli",
    "piccolog",
]

[patch.crates-io]
"barc" = { path = "barc" }
"barc-cli" = { path = "barc-cli" }
"body-image" = { path = "body-image" }
"body-image-futio" = { path = "body-image-futio" }
"piccolog" = { path = "piccolog" }

[profile.release]
lto = "thin"
incremental = false

[profile.bench]
lto = "thin"
incremental = false
