[package]
name          = "barc-cli"
version       = "1.2.0"
edition       = "2018"
authors       = ["David Kellum <dek-oss@gravitext.com>"]
license       = "MIT/Apache-2.0"
description   = "Basic Archive for HTTP dialog serialization, command line."
documentation = "https://docs.rs/body-image"
repository    = "https://github.com/dekellum/body-image"
readme        = "README.md"
keywords      = ["http", "compression", "serialization"]
categories    = ["web-programming", "command-line-utilities"]
exclude       = ["barc.stash/*"]
build         = "build.rs"

[badges]
travis-ci = { repository="dekellum/body-image" }

[dependencies]
barc       = { version=">=1.1.0, <2", default-features=false }
body-image = { version=">=1.1.0, <2", default-features=false }
body-image-futio = { version=">=1.1.0, <2", optional=true, default-features=false }
clap       = { version=">=2.31.2, <3",default-features=false, features=["wrap_help"] }
fern       = { version=">=0.5.5, <2" }
http       = { version=">=0.1.6, <2" }
hyper      = { version=">=0.12.1, <2", optional=true }
log        = { version=">=0.4.4, <2" }

[features]
default = ["mmap", "brotli", "futio"]
futio   = ["hyper", "body-image-futio"]
mmap    = ["barc/mmap", "body-image/mmap", "body-image-futio/mmap"]
brotli  = ["barc/brotli", "body-image-futio/brotli"]

[[bin]]
name = "barc"
path = "src/main.rs"
doctest = false
bench = false
doc = false
test = false
