[package]
name          = "barc-cli"
version       = "2.1.0"
edition       = "2018"
authors       = ["David Kellum <dek-oss@gravitext.com>"]
license       = "MIT/Apache-2.0"
description   = "Basic Archive for HTTP dialog serialization, command line."
repository    = "https://github.com/dekellum/body-image"
readme        = "README.md"
keywords      = ["http", "compression", "serialization"]
categories    = ["web-programming", "command-line-utilities"]
exclude       = ["barc.stash/*"]
build         = "build.rs"

[dependencies]
barc       = { version=">=2.0.0, <2.2", default-features=false }
body-image = { version=">=2.0.0, <2.2", default-features=false }
body-image-futio = { version=">=2.1.0, <2.2", optional=true, default-features=false }
clap       = { version=">=2.31.2, <2.34", default-features=false, features=["wrap_help"] }
http       = { version=">=0.2.0, <0.3" }
hyper      = { version=">=0.14.0, <0.15", default-features=false, features=["http1", "client", "stream", "tcp"], optional=true }
log        = { version=">=0.4.4, <0.5" }
piccolog   = { version=">=1.0.0, <1.1" }

[features]
default = ["mmap", "brotli", "futio"]
futio   = ["hyper", "body-image-futio", "body-image-futio/hyper-http"]
mmap    = ["barc/mmap", "body-image/mmap", "body-image-futio/mmap"]
brotli  = ["barc/brotli", "body-image-futio/brotli"]

[[bin]]
name = "barc"
path = "src/main.rs"
doctest = false
bench = false
doc = false
test = false
