[package]
name          = "barc"
version       = "1.2.0"
edition       = "2018"
authors       = ["David Kellum <dek-oss@gravitext.com>"]
license       = "MIT/Apache-2.0"
description   = "Basic Archive (BARC) file reader and writer, for HTTP dialogs"
documentation = "https://docs.rs/body-image"
repository    = "https://github.com/dekellum/body-image"
readme        = "README.md"
keywords      = ["http", "compression", "serialization"]
categories    = ["web-programming"]
exclude       = ["barc.stash/*"]
build         = "build.rs"

[badges]
travis-ci = { repository = "dekellum/body-image" }

[dependencies]
body-image = { version=">=1.1.0, <2", default-features=false }
brotli     = { version=">=2.2.1, <4", optional=true }
bytes      = { version=">=0.4.6, <0.5" }
flate2     = { version=">=1.0.1, <2" }
http       = { version=">=0.1.6, <0.2" }
httparse   = { version=">=1.2.4, <2" }
tao-log    = { version=">=0.1.0, <2" }
memmap     = { version=">=0.7.0, <0.8", optional=true }
mime       = { version=">=0.3.13, <0.4" }
olio       = { version=">=1.0.0, <2", default-features=false }
tempfile   = { version=">=2.2.0, <4" }

[dev-dependencies]
fern        = { version=">=0.5.5, <0.6" }

[features]
default = ["mmap", "brotli"]
mmap = ["memmap", "olio/mmap", "body-image/mmap"]

[lib]
doctest = false
bench = false
