[package]
name          = "barc"
version       = "2.0.0"
edition       = "2018"
authors       = ["David Kellum <dek-oss@gravitext.com>"]
license       = "MIT/Apache-2.0"
description   = "Body Archive (BARC) file reader and writer, for HTTP dialogs"
documentation = "https://docs.rs/body-image"
repository    = "https://github.com/dekellum/body-image"
readme        = "README.md"
keywords      = ["http", "compression", "serialization"]
categories    = ["web-programming"]
exclude       = ["barc.stash/*"]
build         = "build.rs"

[badges]
travis-ci = { repository = "dekellum/body-image" }

[dependencies]
body-image = { version=">=2.0.0, <2.1", default-features=false }
brotli     = { version=">=3.1.0, <3.4", optional=true }
brotli-decompressor = { version=">=2.1.2", optional=true, default-features=false } # min transitive
bytes      = { version=">=0.5.2, <0.6" }
flate2     = { version=">=1.0.4, <1.1" }
http       = { version=">=0.2.0, <0.3" }
httparse   = { version=">=1.2.4, <1.4" }
tao-log    = { version=">=1.0.0, <1.1" }
memmap     = { version=">=0.7.0, <0.8", optional=true }
mime       = { version=">=0.3.13, <0.4" }
olio       = { version=">=1.3.0, <1.4", default-features=false }
tempfile   = { version=">=3.1.0, <3.2" }

[dev-dependencies]
piccolog   = { version=">=1.0.0, <1.1" }

[features]
default = ["mmap", "brotli"]
mmap = ["memmap", "olio/mmap", "body-image/mmap"]

[lib]
doctest = false
bench = false
