[package]
name          = "body-image-futio"
version       = "1.4.0"
edition       = "2018"
authors       = ["David Kellum <dek-oss@gravitext.com>"]
license       = "MIT/Apache-2.0"
description   = "Futures based asynchronous I/O for body-image."
documentation = "https://docs.rs/body-image"
repository    = "https://github.com/dekellum/body-image"
readme        = "README.md"
keywords      = ["futures", "async", "http", "hyper"]
categories    = ["web-programming::http-client", "web-programming::http-server"]
build         = "build.rs"

[badges]
travis-ci = { repository="dekellum/body-image" }

[dependencies]
body-image = { version=">=1.4.0, <1.5", default-features=false }
brotli     = { version=">=3.1.0, <3.4", optional=true }
bytes      = { version=">=0.4.6, <0.5" }
flate2     = { version=">=1.0.1, <1.1" }
futures    = { version=">=0.3.0-alpha.18, <0.4", package="futures-preview" }
http       = { version=">=0.1.6, <0.2" }
http-body  = { version=">=0.2.0-alpha.1, <0.3" }
httparse   = { version=">=1.2.4, <1.4" }
hyper      = { version=">=0.13.0-a.0, <0.14" }
hyper-tls  = { version=">=0.3.2, <0.5" }
hyperx     = { version=">=0.15.0, <0.16" }
tao-log    = { version=">=0.1.0, <0.3" }
memmap     = { version=">=0.7.0, <0.8", optional=true }
olio       = { version=">=1.2.0, <1.3", default-features=false }
tokio      = { version=">=0.2.0-alpha.1, <0.3", default-features=false, features=["rt-full"] }
tokio-executor = { version=">=0.2.0-alpha.1, <0.3", features=["threadpool"] }
tokio-sync = { version=">=0.2.0-alpha.1, <0.3" }
blocking-permit = { version=">=0.1.0, <0.2" }
lazy_static = { version=">= 1.3.0, <1.4" }

[features]
default = ["mmap", "brotli"]
mmap = ["memmap", "olio/mmap", "body-image/mmap"]
may_fail = [] # Tests which may fail

[lib]
doctest = false
bench = false

[dev-dependencies]
fern        = { version=">=0.5.5, <0.6" }
rand        = { version=">=0.7.0, <0.8" }
# tokio-tcp   = { version=">=0.1.3, <0.2" }
