[package]
name          = "body-image-futio"
version       = "1.4.0"
edition       = "2018"
authors       = ["David Kellum <dek-oss@gravitext.com>"]
license       = "MIT/Apache-2.0"
description   = "Futures based asynchronous I/O for body-image."
documentation = "https://docs.rs/body-image"
repository    = "https://github.com/dekellum/body-image"
readme        = "README.md"
keywords      = ["futures", "async", "http", "hyper"]
categories    = ["web-programming::http-client", "web-programming::http-server"]
build         = "build.rs"

[badges]
travis-ci = { repository="dekellum/body-image" }

[dependencies]
body-image = { version=">=1.4.0, <1.5", default-features=false }
brotli     = { version=">=3.1.0, <3.4", optional=true }
brotli-decompressor = { version=">=2.1.2", optional=true, default-features=false } # min transitive
bytes      = { version=">=0.5.2, <0.6" }
flate2     = { version=">=1.0.4, <1.1" }
futures-core = { version=">=0.3.1, <0.4" }
futures-sink = { version=">=0.3.1, <0.4" }
futures-util = { version=">=0.3.1, <0.4", features=["sink"] }
http       = { version=">=0.2.0, <0.3" }
http-body  = { version=">=0.3.0, <0.4" }
httparse   = { version=">=1.2.4, <1.4" }
hyper      = { version=">=0.13.1, <0.14", default-features=false, features=["stream", "tcp"], optional=true }
hyper-tls  = { version=">=0.4.0, <0.5", optional=true }
hyperx     = { version=">=1.0.0, <1.1" }
tao-log    = { version=">=1.0.0, <1.1" }
memmap     = { version=">=0.7.0, <0.8", optional=true }
olio       = { version=">=1.3.0, <1.4", default-features=false }
tokio      = { version=">=0.2.6, <0.3", features=["blocking"] }
blocking-permit = { version=">=0.1.0, <0.2", default-features=false, features=["tokio-omnibus"] }

[features]
default = ["mmap", "brotli", "hyper_http"]
mmap = ["memmap", "olio/mmap", "body-image/mmap"]
may_fail = [] # Tests which may fail
hyper_http = ["hyper", "hyper-tls"]

[lib]
doctest = false
bench = false

[dev-dependencies]
fern        = { version=">=0.5.5, <0.6" }
rand        = { version=">=0.7.0, <0.8" }
tokio       = { version=">=0.2.6", features=["rt-threaded", "stream"] }
lazy_static = { version=">= 1.3.0, <1.5" }
