[package]
name          = "body-image-futio"
version       = "2.2.0"
edition       = "2018"
authors       = ["David Kellum <dek-oss@gravitext.com>"]
license       = "MIT/Apache-2.0"
description   = "Futures based asynchronous I/O for body-image."
documentation = "https://docs.rs/body-image"
repository    = "https://github.com/dekellum/body-image"
readme        = "README.md"
keywords      = ["futures", "async", "http", "hyper"]
categories    = ["web-programming::http-client", "web-programming::http-server"]
build         = "build.rs"

[dependencies]
body-image = { version=">=2.2.0, <2.3", default-features=false }
brotli     = { version=">=3.1.0, <3.4", optional=true }
brotli-decompressor = { version=">=2.1.2", optional=true, default-features=false } # min transitive
bytes      = { version=">=1.0.0, <1.1" }
flate2     = { version=">=1.0.4, <1.1" }
futures-core = { version=">=0.3.1, <0.4" }
futures-sink = { version=">=0.3.1, <0.4" }
futures-util = { version=">=0.3.1, <0.4", features=["sink"] }
http       = { version=">=0.2.2, <0.3" }
http-body  = { version=">=0.4.0, <0.5" }
httparse   = { version=">=1.2.4, <1.4" }
hyper      = { version=">=0.14.2, <0.15", default-features=false, features=["http1", "client", "server", "stream", "tcp"], optional=true }
hyper-tls  = { version=">=0.5.0, <0.6", optional=true }
hyperx     = { version=">=1.3.0, <1.4" }
tao-log    = { version=">=1.0.0, <1.1" }
memmap     = { version=">=0.7.0, <0.8", optional=true }
olio       = { version=">=1.3.0, <1.5", default-features=false }
tokio      = { version=">=1.0.1, <1.1", features=[] }
blocking-permit = { version=">=1.3.0, <1.4", default-features=false, features=["tokio-omnibus", "cleaver", "yield-stream"] }

[features]
default = ["mmap", "brotli", "hyper-http"]
hyper-http = ["hyper", "hyper-tls"]
mmap = ["memmap", "olio/mmap", "body-image/mmap"]

may-fail = [] # Tests which may fail
tangential = [] # less interesting benchmarks

[lib]
doctest = false
bench = false

[dev-dependencies]
lazy_static = { version=">= 1.3.0, <1.5" }
piccolog    = { version=">=1.0.0, <1.1" }
rand        = { version=">=0.7.0, <0.8" }
tokio       = { version=">=1.0.1", features=["rt-multi-thread"] }

[[example]]
name = "server"
required-features = ["hyper-http"]
