[package]
name          = "body-image"
version       = "1.0.0"
edition       = "2018"
authors       = ["David Kellum <dek-oss@gravitext.com>"]
license       = "MIT/Apache-2.0"
description   = "Adaptive RAM/file-backed HTTP bodies."
documentation = "https://docs.rs/body-image"
repository    = "https://github.com/dekellum/body-image"
readme        = "README.md"
keywords      = ["buffer", "http"]
categories    = ["web-programming"]

[badges]
travis-ci = { repository="dekellum/body-image" }

[dependencies]
bytes      = { version=">=0.4.6, <2" }
failure    = { version=">=0.1.2, <2", default-features=false, features=["std"] }
http       = { version=">=0.1.6, <2" }
log        = { version=">=0.4.4, <2" }
memmap     = { version=">=0.7.0, <2", optional=true }
olio       = { version=">=1.0.0, <2", default-features=false }
tempfile   = { version=">=2.2.0, <4" }

[features]
default = ["mmap"]
mmap = ["memmap", "olio/mmap"]

[lib]
doctest = false
