[package]
name          = "body-image"
version       = "2.2.0"
edition       = "2018"
authors       = ["David Kellum <dek-oss@gravitext.com>"]
license       = "MIT/Apache-2.0"
description   = "Adaptive RAM/file-backed HTTP bodies."
documentation = "https://docs.rs/body-image"
repository    = "https://github.com/dekellum/body-image"
readme        = "README.md"
keywords      = ["buffer", "http"]
categories    = ["web-programming"]
build         = "build.rs"

[dependencies]
bytes      = { version=">=1.0.0, <1.1" }
http       = { version=">=0.2.2, <0.3" }
log        = { version=">=0.4.4, <0.5" }
memmap     = { version=">=0.7.0, <0.8", optional=true }
olio       = { version=">=1.3.0, <1.5", default-features=false }
tempfile   = { version=">=3.1.0, <3.2" }

# A tempfile dependency, max transitive for MSRV 1.39.0
# https://github.com/Stebalien/tempfile/issues/120
remove_dir_all      = { version=">=0.5.0, <0.5.3", optional=true, default-features=false }

[features]
default = ["mmap"]
mmap = ["memmap", "olio/mmap"]

[lib]
doctest = false
