[package]
name          = "body-image"
version       = "2.3.0"
edition       = "2018"
authors       = ["David Kellum <dek-oss@gravitext.com>"]
license       = "MIT/Apache-2.0"
description   = "Adaptive RAM/file-backed HTTP bodies."
repository    = "https://github.com/dekellum/body-image"
readme        = "README.md"
keywords      = ["buffer", "http"]
categories    = ["web-programming"]
build         = "build.rs"

[dependencies]
bytes      = { version=">=1.0.0, <1.2" }
http       = { version=">=0.2.2, <0.3" }
tao-log    = { version=">=1.0.0, <1.1" }
memmap     = { version=">=0.7.0, <0.8", optional=true }
olio       = { version=">=1.4.0, <1.5", default-features=false }
tempfile   = { version=">=3.1.0, <3.3" }

[features]
default = ["mmap"]
mmap = ["memmap", "olio/mmap"]

[lib]
doctest = false
