[package]
name          = "piccolog"
version       = "1.0.2"
edition       = "2018"
authors       = ["David Kellum <dek-oss@gravitext.com>"]
license       = "MIT/Apache-2.0"
description   = "A custom logger for body-image and related crates"
documentation = "https://docs.rs/piccolog"
repository    = "https://github.com/dekellum/body-image"
readme        = "README.md"
build         = "build.rs"

[dependencies]
log        = { version=">=0.4.4, <0.4.11", features = ["std"] }
